--- a/src/components/form-register/form-register.pug
+++ b/src/components/form-register/form-register.pug
@@ -1,5 +1,5 @@
 include ../mixins.pug
-
+include ../input-text/input-text.pug
 .wrap
   .container-form
       h1( class='title-main') Регистрация аккаунта
