--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,7 +1,7 @@
 
 include ../mixins.pug
 
-div
+mixin header()
   div(class='nav-wrapper')
     div(class='container menu')
       div(id='logo' class='menu-logo')
