--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -1,5 +1,5 @@
 include ../mixins.pug
-
+include ../../blocks/room-information/room-information.pug
 div(class='information')
     div(class='information-top-part')
         div(class='gallery-top--responsive')
