--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -1,5 +1,7 @@
 
 include ../mixins.pug
+include ../card-room/card-room.pug
+include ../../blocks/checkbox/checkbox.pug
 .container.settings
     #left-side.left-side
         div(class='sidebar' id='sidebar')
