--- a/src/index.pug
+++ b/src/index.pug
@@ -25,7 +25,7 @@ html(lang="en")
         .wrapper    
             //- include components/main_ui/main_ui.pug
             //- //- include components/header/header.pug
-            //- //- include components/footer/footer.pug
+            //- include components/footer/footer.pug
             //- include components/signup-page/signup-page.pug
             //- include components/signin-page/signin-page.pug
             include components/search-page/search-page.pug
