--- a/src/components/signin-form/signin-form.pug
+++ b/src/components/signin-form/signin-form.pug
@@ -1,10 +1,12 @@
+include ../input-text/input-text.pug
 .wrapper
   .wrap
     .signin-container-form
         h1(class='title-main') Войти
-
-        input(class='input-text input-signin' placeholder='Email')
-        input(class='input-text input-signin input-signin--second' placeholder='Пароль')
+        
+        +input-text('Email')
+        div(class='input-signin input-signin--second')
+          +input-text('Пароль')
 
         button(type='button' class='btn  btn-confirm btn-signin') Войти
         
