--- a/src/blocks/calculator/calculator.pug
+++ b/src/blocks/calculator/calculator.pug
@@ -1,5 +1,4 @@
-.calculator-wrapper
-    div(class='calculator')
+.calculator
         .calculator__container
             .flex-row
                 p(class='card-number') 
