--- a/src/blocks/comfort-dropdown/comfort-dropdown.pug
+++ b/src/blocks/comfort-dropdown/comfort-dropdown.pug
@@ -1,7 +1,7 @@
 label.comfort
-  .comfort-button(id='comfort-button') Удобства
-  input(type='checkbox' class='comfort-input' id='comfort-input')
-  ul(class='comfort-menu')
+  .comfort__button(id='comfort-button') Удобства
+  input(type='checkbox' class='comfort__input' id='comfort__input')
+  ul(class='comfort__menu')
     li.flex-row
       p(class='title') Спальни
       .flex-row
