--- a/src/blocks/range-slider/range-slider.pug
+++ b/src/blocks/range-slider/range-slider.pug
@@ -1,2 +1,3 @@
-div(id='slider-range')  
-div.slider__range__title Стоимость за сутки пребывания в номере 
+mixin range-slider(text)
+    .slider__range#slider-range 
+    .slider__range__title= text
