--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,4 +1,6 @@
 include ../mixins.pug
+include ../../blocks/input-subscription/input-subscription.pug
+
 footer
   .footer.container
     .footer-nav
