--- a/src/components/form-register/form-register.pug
+++ b/src/components/form-register/form-register.pug
@@ -1,5 +1,8 @@
 include ../mixins.pug
 include ../input-text/input-text.pug
+include ../signin-button/signin-button.pug
+include ../../blocks/radio-button/radio-button.pug
+
 .wrap
   .container-form
       h1( class='title-main') Регистрация аккаунта
