--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,12 +1,12 @@
 @import "../components/variables.scss";
 
-.nav-wrapper{
+.menu{
   padding-bottom: 10px;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 }
 
 .menu {
-  &-logo {
+  &__logo {
     background-image: url(../images/Logo.svg);
     background-image: url(../images/Logo.svg);
     background-repeat: no-repeat;
@@ -16,14 +16,14 @@
     background-repeat: no-repeat;
     display: block;
     float: left;
-    &-toggle {
+    &__toggle {
       display: none;
     }
-    &-drop {
+    &__drop {
       display: none;
     }
   }
-  &-nav {
+  &__nav {
     float: right;
     padding: 15px 0;
     margin: 0;
@@ -92,14 +92,14 @@
 @media (max-width: 1300px) {
   .menu {
     margin: 0;
-    &-logo {
+    &__logo {
       display: block;
       padding: 20px 0 10px 0;
       width: 180px;
       height: 50px;
       text-align: center;
       float: none;
-      &-toggle {
+      &__toggle {
         display: block;
         padding: 14px 20px;
         color: $violet-gradient;
@@ -111,11 +111,11 @@
           display: none;
         }
       }
-      &-drop:checked + ul {
+      &__drop:checked + ul {
         display: block;
       }
     }
-    &-nav {
+    &__nav {
       float: left;
       width: 100%;
       display: none;
@@ -131,7 +131,7 @@
     margin-bottom: 10px;
   }
 
-  .menu-logo-toggle{ 
+  .menu__logo__toggle{ 
     margin-left: 90%;
     margin-top: -60px;
   }
