--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -1,75 +1,75 @@
-@mixin btn-text {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  text-transform: uppercase;
-  text-decoration: none;
-}
+// @mixin btn-text {
+//   font-style: normal;
+//   font-weight: bold;
+//   font-size: 12px;
+//   line-height: 15px;
+//   text-transform: uppercase;
+//   text-decoration: none;
+// }
 
 
 
-@mixin btn-violet {
-  border: none;
-  padding: 15px 10px;
-  background: red;
-  border-radius: 22px;
-  text-transform: uppercase;
-  color: $white-color;
-  margin: 30px 0;
-}
+// @mixin btn-violet {
+//   border: none;
+//   padding: 15px 10px;
+//   background: red;
+//   border-radius: 22px;
+//   text-transform: uppercase;
+//   color: $white-color;
+//   margin: 30px 0;
+// }
 
-@mixin btn-small-violet {
-  font-family: "OpenSans-Bold";
-  letter-spacing: 1.3px;
-  border: none;
-  padding: 15px 32px;
-  background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-  border-radius: 30px;
-  text-transform: uppercase;
-  color: $white-color;
-  font-weight: bold;
-  font-size: 17.5px;
-}
+// @mixin btn-small-violet {
+//   font-family: "OpenSans-Bold";
+//   letter-spacing: 1.3px;
+//   border: none;
+//   padding: 15px 32px;
+//   background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+//   border-radius: 30px;
+//   text-transform: uppercase;
+//   color: $white-color;
+//   font-weight: bold;
+//   font-size: 17.5px;
+// }
 
-@mixin title {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 30px;
-  color: $black-title;
-}
+// @mixin title {
+//   font-style: normal;
+//   font-weight: bold;
+//   font-size: 24px;
+//   line-height: 30px;
+//   color: $black-title;
+// }
 
-@mixin label {
-  @include btn-text;
-  color: $black-title;
-  text-align: left;
-}
+// @mixin label {
+//   @include btn-text;
+//   color: $black-title;
+//   text-align: left;
+// }
 
-@mixin text {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 1.1rem;
-  letter-spacing: 0;
-}
+// @mixin text {
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 1.1rem;
+//   letter-spacing: 0;
+// }
 
-@mixin small-title {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  text-transform: uppercase;
-  color: $black-title;
-}
+// @mixin small-title {
+//   font-style: normal;
+//   font-weight: bold;
+//   font-size: 12px;
+//   line-height: 15px;
+//   text-transform: uppercase;
+//   color: $black-title;
+// }
 
-@mixin input-date {
-  width: 150px;
-  height: 44px;
-  border: 1px solid $light-black-color;
-  box-sizing: border-box;
-  border-radius: 4px;
-  display: block;
-}
+// @mixin input-date {
+  // width: 150px;
+  // height: 44px;
+  // border: 1px solid $light-black-color;
+  // box-sizing: border-box;
+  // border-radius: 4px;
+  // display: block;
+// }
 
 
 
