--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -64,19 +64,6 @@ p {
   margin-bottom: 5px;
 }
 
-.btn-signup {
-  font-family: "OpenSans-Bold";
-  letter-spacing: 1.3px;
-  border: none;
-  padding: 15px 32px;
-  background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-  border-radius: 30px;
-  text-transform: uppercase;
-  color: $white-color;
-  font-weight: bold;
-  font-size: 17.5px;
-}
-
 ol,
 ul {
   list-style: none;
@@ -115,21 +102,6 @@ hr {
   }
 }
 
-.btn-link {
-  display: inline-block;
-  width: 145px;
-  height: 65px;
-  border: 2.4px solid $violet-text;
-  text-transform: uppercase;
-  border-radius: 35px;
-  font-size: 19px;
-  text-align: center;
-  color: $violet-text;
-  text-decoration: none;
-  font-family: "OpenSans-Bold";
-  padding-top: 15px;
-}
-
 .btn-like {
   border: 2px solid rgba(31, 32, 65, 0.25);
   outline: none;
@@ -160,18 +132,31 @@ hr {
 }
 
 .label {
-  @include label;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: $black-title;
+  text-align: left;
   display: inline-block;
   width: 100%;
   margin-bottom: 5px;
 }
 
 .text {
-  @include text;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.1rem;
+  letter-spacing: 0;
 }
 
 .formtext {
-  @include text;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.1rem;
+  letter-spacing: 0;
   color: $black-color;
   display: flex;
   font-size: 14px;
@@ -186,57 +171,6 @@ hr {
 .radio-buttons {
   margin: 19px 0 30px 0;
 }
-
-.radio {
-  input[type="radio"] {
-    position: absolute;
-    opacity: 0;
-    + .radio-label {
-      &:before {
-        content: "";
-        background: #fff;
-        border-radius: 100%;
-        border: 2px solid rgba(31, 32, 65, 0.25);
-        display: inline-block;
-        width: 1.9em;
-        height: 1.9em;
-        position: relative;
-        top: -0.1em;
-        margin-right: 1em;
-        vertical-align: top;
-        cursor: pointer;
-        text-align: center;
-        transition: all 250ms ease;
-      }
-    }
-    &:checked {
-      opacity: 0;
-      + .radio-label {
-        &:before {
-          border: 2px solid  #BC9CFF;
-          background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-          box-shadow: inset 0 0 0 4px #fff;
-        }
-      }
-    }
-    &:focus {
-      + .radio-label {
-        &:before {
-          outline: none;
-          border-color: #fff;
-        }
-      }
-    }
-    + .radio-label {
-      &:empty {
-        &:before {
-          margin-right: 0;
-        }
-      }
-    }
-  }
-}
-
 .label-radio {
   font-size: 20.6px;
   margin-left: 15px;
@@ -244,7 +178,12 @@ hr {
 }
 
 .input-date {
-  @include input-date;
+  width: 150px;
+  height: 44px;
+  border: 1px solid $light-black-color;
+  box-sizing: border-box;
+  border-radius: 4px;
+  display: block;
 }
 @media only screen and (max-width: 1000px) {
   .container {
@@ -272,13 +211,7 @@ hr {
   .btn-confirm {
     width: 390px;
   }
-
-  .btn-link {
-    margin: 0 auto;
-    margin-top: 10px;
-  }  
 }
-
 
 @media only screen and (max-width: 400px) {
   html,
@@ -293,5 +226,5 @@ hr {
   .btn-link {
     margin: 0 auto;
     margin-top: 10px;
-  }  
+  }
 }
