--- a/src/blocks/single-airdatepicker/single-airdatepicker.scss
+++ b/src/blocks/single-airdatepicker/single-airdatepicker.scss
@@ -1,4 +1,4 @@
-@import "../components/variables.scss";
+// @import "../components/variables.scss";
 
 .flex-wrap {
   display: flex;
@@ -15,11 +15,11 @@
   left: 80%;
   content: "";
   padding: 5px;
-  box-shadow: 2px -2px 0 0 $black-text inset;
+  box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
   display: inline-block;
   transform: rotate(-45deg);
   margin-left: 10px;
-  color: $black-text;
+  color: rgba(31, 32, 65, 0.5);
 }
 
 .single-arrow-wrapper {
@@ -33,11 +33,11 @@
   left: 87%;
   content: "";
   padding: 5px;
-  box-shadow: 2px -2px 0 0 $black-text inset;
+  box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
   display: inline-block;
   transform: rotate(-45deg);
   margin-left: 10px;
-  color: $black-text;
+  color: rgba(31, 32, 65, 0.5);
 }
 
 #single__input__range {
@@ -64,7 +64,7 @@
     font-weight: normal;
     font-size: 1rem;
     line-height: 18px;
-    color: $color-standart;
+    color: rgba(31, 32, 65, 0.5);
     color: rgba(31, 32, 65, 0.75);
   }
 }
