--- a/src/blocks/little-dropdown/little-dropdown.scss
+++ b/src/blocks/little-dropdown/little-dropdown.scss
@@ -1,4 +1,4 @@
-@import "../components/variables.scss";
+
 .little-dropdowns {
     display: inline-block;
     position: relative;
@@ -16,7 +16,7 @@
     font-weight: normal;
     font-size: 1.14rem;
     line-height: 18px;
-    color: $color-standart;
+    color: rgba(31, 32, 65, 0.35);
     display: table-cell;
     vertical-align: middle;
     padding-left: 20px;
@@ -26,13 +26,13 @@
   .little-dropdowns .dd-button:after {
     content: "";
     padding: 5px;
-    box-shadow: 2px -2px 0 0 $black-text inset;
+    box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
     display: inline-block;
     transform: rotate(-45deg);
     position: absolute;
     top: 30px;
     left: 90%;
-    color: $black-text;
+    color: rgba(31, 32, 65, 0.5);
   }
   
   .little-dropdowns .dd-input {
