--- a/src/components/components-page/components-page.scss
+++ b/src/components/components-page/components-page.scss
@@ -1,5 +1,5 @@
-@import "../components/variables.scss";
-// Style for input with arrow
+// @import "../components/variables.scss";
+// // Style for input with arrow
 
 // Styles for checkbox
 
